# app/controllers/verifyController.js
@@ -7,41 +7,48 @@ const userModel = require("../models/userModel");
 exports.verifyUserToken = async (req, res, next) => {
   try {
     const token = req.params.token;
+
+    // CHECK TOKEN EXIST
     if (token) {
       const decoded = jwt.verify(token, process.env.JWT_SECRET);
-      
-        const { email } = decoded;
-        if(await userModel.checkUserExist(email)){
-          return res.status(208).json({
-            status: "Already Reported",
-            statusCode: 201,
-            message: "Your Email Already Verified",
-          });
-        }
-        debugServer(
-          `user dengan email ${email} registrasi dengan token :  ${token}`
-        );
+      const { email } = decoded;
 
-        if (await userModel.changeVerifyStatusTrue(email)){
-          res.status(201).json({
-            status: "success",
-            statusCode: 201,
-            message: "Your Email, Verified Successfuly.",
-          });
-        }
-      
+      // CHECK VERIFY TOKEN PAYLOAD VALID
+      if (await userModel.checkUserExist(email)) {
+        return res.status(409).json({
+          status: "error",
+          data: null,
+          errors: [
+            {
+              field: "email",
+              email: email,
+              message: "User email already verified",
+            },
+          ]
+        });
+      }
 
+      // CHANGE USER VERIFIED STATUS
+      if (await userModel.changeVerifyStatusTrue(email)) {
+        res.status(200).json({
+          status: "success",
+          data: [{
+            email: email
+          }],
+          message: "Your Email, Verified Successfuly.",
+        });
+      }
     } else {
-      next(createError(400, "Bad Request"));
+      next(createError(400, "Token are not filled"));
     }
   } catch (error) {
     debugServer("Verification error:", error);
     if (error.name === "TokenExpiredError") {
       return next(createError(401, "Token Was Expired"));
     }
-    if (error.name === 'JsonWebTokenError'){
+    if (error.name === "JsonWebTokenError") {
       return next(createError(401, "Invalid Token"));
     }
-    next(createError(500, "error verifying user's email verification token"));
+    next(createError(500, "Error verifying user's email verification token"));
   }
 };
